--- a/learning-audit-app/package.json
+++ b/learning-audit-app/package.json
@@ -2,16 +2,22 @@
   "name": "learning-audit-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "server": "node server.js"
+    "server": "nodemon dotenv/config server/server.js",
+    "reset-database": "node -r dotenv/config server/db/scripts/reset-database.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "next": "14.2.5",
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18"
   },
