--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "next": "14.2.5",
+    "next": "^14.2.11",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "react": "^18",
