--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest"
   },
   "dependencies": {
-    "next": "^14.2.11",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "15.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "jest": "^29.7.0"
+    "eslint-config-next": "15.3.1",
+    "jest": "29.7.0"
   }
 }
