--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@sentry/nextjs": "9.22.0",
     "next": "15.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
